Line Spacing Notebook + Modifications

--- a/Notebooks/synthetic_data.ipynb
+++ b/Notebooks/synthetic_data.ipynb
@@ -5,7 +5,9 @@
    "id": "7d84878f",
    "metadata": {},
    "source": [
-    "## Synthetic Full Tensor Gravity Gradiometry"
+    "## Synthetic Full Tensor Gravity Gradiometry\n",
+    "\n",
+    "This notebook is the introduction to `tensorweave`. Using a simple synthetic dataset generated in SimPEG (Cockett et al, 2015), this notebook demonstrates the power of interpolating tensor fields using the underlying potentials."
    ]
   },
   {
@@ -249,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "f4337ab5",
    "metadata": {},
    "outputs": [],
@@ -259,9 +261,9 @@
     "xyz_perturb[:, 2] += (np.random.randn(xyz.shape[0]))\n",
     "# Convert to torch Tensors\n",
     "xyz_torch = torch.tensor(xyz_perturb, device=device, dtype=dtype)\n",
-    "ftg_torch = torch.tensor(ftg, device=device, dtype=dtype)  # xx, xy, xz, yz, zz\n",
+    "ftg_torch = torch.tensor(ftg, device=device, dtype=dtype)  # xx, xy, xz, yy, yz, zz\n",
     "\n",
-    "# Preload active grid points (for Laplacian loss) on GPU\n",
+    "# Preload active grid points (for Laplacian loss)\n",
     "actv_points = np.c_[xvec, yvec, zvec][actv]  # shape: (N_active, 3)\n",
     "actv_points_torch = torch.tensor(actv_points, device=device, dtype=dtype)"
    ]
@@ -354,16 +356,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "id": "c552f1df",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Evaluate!\n",
-    "_, _, predicted_hessian = tw.compute_hessian_eval(model, actv_points_torch, chunk_size=2048)\n",
+    "# Evaluate using the predict method N.B: predict() outputs a numpy array, for a numpy array input.\n",
+    "predicted_hessian = model.predict(actv_points, output=\"hessian\", chunk_size=2048)\n",
     "# Create an array to hold gradient components over the full grid\n",
     "hess_components = np.full((xvec.shape[0], 6), np.nan)\n",
-    "hess_components[actv] = predicted_hessian.cpu().detach().numpy().reshape(-1, 9)[:, (0, 1, 2, 4, 5, 8)] # xx, xy, xz, yy, yz, zz"
+    "# Reshape the predicted hessian and store it in the hess_components array\n",
+    "hess_components[actv] = predicted_hessian.reshape(-1, 9)[:, (0, 1, 2, 4, 5, 8)] # xx, xy, xz, yy, yz, zz"
    ]
   },
   {
@@ -378,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "id": "0479f23c",
    "metadata": {},
    "outputs": [],
@@ -402,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "id": "bd431b1e",
    "metadata": {},
    "outputs": [],
@@ -423,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "id": "6252de01",
    "metadata": {},
    "outputs": [
