Added the ensemble geyer model link

--- a/Notebooks/geyer_comparison.ipynb
+++ b/Notebooks/geyer_comparison.ipynb
@@ -206,6 +206,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8a3784c5",
+   "metadata": {},
+   "source": [
+    "## Download the pre-trained ensemble for Geyer!\n",
+    "\n",
+    "Since GitHub imposes file-size limits, if you want to avoid running the ensemble yourself, download the pre-trained ensemble at this link: http://doi.org/10.14278/rodare.3943, and place it in the Models directory!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "6c1b55d4",
